tests/compile_fail/from/union.stderr
error: `From` cannot be derived for unions
 --> tests/compile_fail/from/union.rs:2:5
  |
2 | pub union Foo {
  |     ^^^^^
